// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValueButton renders 1`] = `
<button
  className="css-1csotgl css-1efi2jj css-tdosd6"
  onClick={[Function]}
  value="1"
>
  1
</button>
`;

exports[`ValueButton renders expanded button 1`] = `
<button
  className="css-1csotgl css-1efi2jj css-tdosd6 css-94frz2"
  onClick={[Function]}
  value="1"
>
  1
</button>
`;
